k8s/guardians/default/traefik/traefik.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: default
  labels: &labels
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.hannahs.family
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  selector:
    <<: *labels

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-api
  namespace: default
  labels: &labels
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
spec:
  clusterIP: None
  ports:
    - name: api
      port: 8080
      targetPort: api
  selector:
    <<: *labels

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: traefik
  namespace: default
  labels: &labels
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
  annotations:
    fluxcd.io/tag.traefik: semver:~2
    fluxcd.io/automated: "true"
spec:
  serviceName: traefik
  replicas: 1
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
      annotations:
        vault.security.banzaicloud.io/vault-role: traefik
        vault.security.banzaicloud.io/vault-skip-verify: "true"
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v2.0.1
          args:
            - --configFile=/config/traefik.yml
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: api
              containerPort: 8080
          livenessProbe: &probe
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            <<: *probe
          volumeMounts:
            - name: acme
              mountPath: /acme
            - name: tls
              mountPath: /tls
              readOnly: true
            - name: config
              mountPath: /config
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: traefik-default-cert
            defaultMode: 0400
        - name: config
          configMap:
            name: traefik
  volumeClaimTemplates:
    - metadata:
        name: acme
        labels:
          <<: *labels
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-auth-redirect
  namespace: default
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
spec:
  headers:
    customRequestHeaders:
      X-Auth-Request-Redirect: https://traefik.hannahs.family

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-http
  namespace: default
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`traefik.hannahs.family`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: default
      services:
        - name: traefik-api
          port: 8080

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-https
  namespace: default
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`traefik.hannahs.family`)
      kind: Rule
      middlewares:
        - name: traefik-auth-redirect
          namespace: default
        - name: oauth2-proxy
          namespace: default
      services:
        - name: traefik-api
          port: 8080
  tls:
    certResolver: default
